# anthropic-sdk-rust

./: Cargo.toml  README.md  TEST_SUMMARY.md  deny.toml  register-hooks.sh  tarpaulin.toml
.github/workflows/: ci.yml
benches/: performance_benchmarks.rs
examples/: advanced_configuration.rs  basic_chat.rs  chat_request_builder.rs  conversation.rs  multimodal.rs  streaming_accumulator.rs  streaming_chat.rs  token_counting.rs  tools.rs
git-hooks/: pre-commit.sh
src/: advanced_config_test.rs  client.rs  client_test.rs  config.rs  config_test.rs  error.rs  error_test.rs  lib.rs  mock.rs  multimodal.rs  property_tests.rs  streaming.rs  streaming_test.rs  tools.rs  types.rs  types_test.rs
tests/: integration_tests.rs  mock_integration_tests.rs
