[package]
name = "anthropic_rust"
version = "0.1.1"
edition = "2021"
rust-version = "1.89"
authors = ["Tomasz Mikus <hi@tomaszmik.us>"]
description = "A modern, type-safe Rust SDK for the Anthropic API, providing async-first access to Claude models with comprehensive error handling and streaming support."
license = "MIT"
repository = "https://github.com/anthropics/anthropic-sdk-rust"
homepage = "https://github.com/anthropics/anthropic-sdk-rust"
documentation = "https://docs.rs/anthropic"
keywords = ["anthropic", "claude", "ai", "api", "sdk"]
categories = ["api-bindings", "web-programming::http-client", "asynchronous"]
readme = "README.md"
include = [
    "src/**/*",
    "examples/**/*",
    "tests/**/*",
    "benches/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1.0", features = ["rt", "macros"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# URL handling
url = { version = "2.0", features = ["serde"] }

# Base64 encoding for images
base64 = "0.22"

# MIME type handling
mime = "0.3"

# Async utilities
futures = "0.3"

# Bytes handling
bytes = "1.0"

# Optional JSON Schema support
schemars = { version = "0.8", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-test = "0.4"
env_logger = "0.10"
tempfile = "3.0"
# Testing dependencies
wiremock = "0.6"
mockito = "1.4"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
# Additional test utilities
pretty_assertions = "1.4"
serial_test = "3.0"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
schemars = ["dep:schemars"]
